# lsn

./: .gitignore  README.md  requirements.yml
exercise01/: CMakeLists.txt  LSN_Exercises_01.ipynb  exercise01.ipynb
exercise01/include/: random.h
exercise01/src/: ex01.1.cpp  ex01.2.cpp  ex01.3.cpp  ex01.cpp  random.cpp
exercise02/: CMakeLists.txt  LSN_Exercises_02.ipynb  exercise02.ipynb
exercise02/include/: random.h  randomWalk.h
exercise02/src/: ex02.1.cpp  ex02.2.cpp  random.cpp  randomWalk.cpp
exercise03/: CMakeLists.txt  LSN_Exercises_03.ipynb  exercise03.ipynb
exercise03/src/: ex03.1.cpp  myStatFunc.cpp
exercise04/: CMakeLists.txt  LSN_Exercises_04.ipynb  ex04.1.sh  ex04.3.sh  exercise04.ipynb
exercise04/include/: MolDyn_NVE.h
exercise04/md-configurations/: ._MolDyn_NVE.cpp  ._MolDyn_NVE.h  ._clean.sh  ._config.0  input.dummy  input.gas
exercise04/src/: MolDyn_NVE.cpp  ex04.1.cpp  moleculardynamics.cpp
exercise05/: CMakeLists.txt  LSN_Exercises_05.ipynb  ex05.1.sh  exercise05.ipynb
exercise05/include/: hydrogen.h  metropolis.h
exercise05/src/: h-atom.cpp  hydrogen.cpp  metropolis.cpp
exercise06/: CMakeLists.txt  LSN_Exercises_06.ipynb  equilibration.sh  ex06.1.sh  exercise06.ipynb  input.dummy  launcher.py
exercise06/include/: ising.h  myStatFunc.h
exercise06/src/: ising.cpp  isingmodel.cpp
exercise07/: CMakeLists.txt  LSN_Exercises_07.ipynb  ex07.1.sh  ex07.2.sh  ex07.3.sh  exercise07.ipynb
exercise07/include/: MolDyn_NVE.h  mcmd.h
exercise07/md-configurations/: input.dummy  input.gas  input.liquid  input.solid
exercise07/md-configurations/mc/: input.gas  input.liquid  input.solid
exercise07/md-configurations/md/: input.liquid  input.solid
exercise07/src/: MolDyn_NVE.cpp  mcmd.cpp  montecarlomd.cpp
exercise08/: CMakeLists.txt  LSN_Exercises_08.ipynb  ex08.2.sh  ex08.3.sh  exercise08.ipynb
exercise08/include/: constants.h  functions.h  varMC.h
exercise08/src/: main.cpp  qmc1d.cpp  qmc1d_const.cpp  random.cpp  varMC.cpp
exercise09/: LSN_Exercises_09.ipynb  ex09.1.sh  exercise09.ipynb
exercise09/include/: TCP.h  TSP.h
exercise09/src/: TSP.cpp  main.cpp
exercise10/: CMakeLists.txt  LSN_Exercises_10.ipynb  ex10.1.sh  ex10.2.sh  exercise10.ipynb
exercise10/include/: TSP.h  random.h
exercise10/src/: TSP.cpp  main-parallel.cpp  main.cpp  random.cpp
exercise11/: LSN_Exercises_11.ipynb  exercise11.ipynb  model_weights.h5
exercise12/: exercise12.ipynb
